--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta
       http-equiv="refresh"
-      content="0; url=file:///Users/pushkalgupta/Desktop/JavaScript/Project/PG.html.js/main.html#"
+      content="0; url=/Project/PG.html.js/main.html#"
     />
   </head>
 </html>
