--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    window.alert("Hello World");
     <meta
       http-equiv="refresh"
       content="0; url=/Project/PG.html.js/main.html#"
