--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta
       http-equiv="refresh"
-      content="0; url=pushkalgupta.com/Project/PG.html.js/main.html#"
+      content="0; url=https://pg-carpenoctem.github.io/pushkalgupta.com/Project/PG.html.js/main.html#"
     />
   </head>
 </html>
