--- a/Project/PG.Quiz/Quiz.html
+++ b/Project/PG.Quiz/Quiz.html
@@ -14,7 +14,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a
           class="navbar-brand"
-          href="file:///Users/pushkalgupta/Desktop/JavaScript/Project/PG.html.js/main.html#"
+          href="../PG.html.js/main.html#"
           >PG.Quiz</a
         >
         <button
