--- a/Project/chess.html.js/p3.html
+++ b/Project/chess.html.js/p3.html
@@ -11,7 +11,7 @@
     /> -->
     <link
       rel="icon"
-      href="file:///Users/pushkalgupta/Desktop/JavaScript/Project/chess.html.js/images/logo.png"
+      href="../chess.html.js/images/logo.png"
       type="image/x-icon"
     />
     <link
@@ -46,7 +46,7 @@
       <div class="container">
         <a
           class="navbar-brand"
-          href="file:///Users/pushkalgupta/Desktop/JavaScript/Project/PG.html.js/main.html#"
+          href="../PG.html.js/main.html#"
           >PG.Chess</a
         >
         <button
