--- a/Project/employeeSystem.html.js/p2.html
+++ b/Project/employeeSystem.html.js/p2.html
@@ -33,7 +33,7 @@
       <div class="container">
         <a
           class="navbar-brand"
-          href="file:///Users/pushkalgupta/Desktop/JavaScript/Project/PG.html.js/main.html#"
+          href="../PG.html.js/main.html#"
           >PG.Employee</a
         >
         <button
