--- a/Project/studentSystem.html.js/p1.html
+++ b/Project/studentSystem.html.js/p1.html
@@ -22,7 +22,7 @@
       <div class="container">
         <a
           class="navbar-brand"
-          href="file:///Users/pushkalgupta/Desktop/JavaScript/Project/PG.html.js/main.html#"
+          href="../PG.html.js/main.html#"
           >PG.Student</a
         >
         <button
